--- a/kora-rent-bot/package.json
+++ b/kora-rent-bot/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "@types/bs58": "^4.0.4",
     "@types/node": "^25.0.9",
+    "bs58": "^6.0.0",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "cors": "^2.8.5",
